Version 1.1.6
--------------------------------------------------------------------------
+ Added link check on url setting to prevent ./ from suffixing and
  breaking storage.

Version 1.1.5
--------------------------------------------------------------------------
+ Lowered Access loading priority.

Version 1.1.4
--------------------------------------------------------------------------
23 March 2009
+ Trimming the title to prevent extra spaces in shortcuts

Version 1.1.3
---------------------------------------------------------------------------
11 February 2009
+ Access forces bad urls to 404 error

Version 1.1.2
---------------------------------------------------------------------------
11 December 2008
+ Fixed some error notices

2 December 2008
+ Fixed access shortcuts to work with GET arrays

Version 1.1.1
---------------------------------------------------------------------------
25 November 2008
+ Reformated shortcut creation method. Should work with old version
  as well as any new longer links.

Version 1.1.0
---------------------------------------------------------------------------
+ New ability to added a RewriteBase to a .htaccess file.

Version 1.0.2
---------------------------------------------------------------------------
28 October 2008
+ Added ability to add a RewriteBase to .htaccess file.

30 May 2008
+ Removed htaccess file. Now expect core/inc/htaccess.

Version 1.0.1
---------------------------------------------------------------------------
8 April 2008
+ Fixed Access option not appearing on MiniAdmin
+ .html completely removed from shortcuts

Version 1.0.0
---------------------------------------------------------------------------
10 March 2008
+ Removed .html suffix to shortcuts.

5 March 2008
+ Fixed include missing from access for shortcuts
+ Fixed shortcut code

22 February 2008
+ New functions added:
  o isDenied - returns true or false depending on if an ip is denied
  o addIP - static method of adding a deny or allow ip