@@ -1,3 +1,5 @@
++ htaccess tab and functionality made deity only
+
 Version 1.1.6
 --------------------------------------------------------------------------
 + Added link check on url setting to prevent ./ from suffixing and
